# parail

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
examples/: iter.rs  stream.rs
src/: lib.rs  prelude.rs
src/iter/: filter.rs  filter_map.rs  map.rs  mod.rs
src/stream/: filter.rs  filter_map.rs  map.rs  mod.rs
src/utils/: heap.rs  mod.rs  oneshot.rs
