[package]
name = "parail"
version = "0.2.0"
edition = "2024"
description = "Easily switch between sequential and parallel."
authors = ["Kanichi Uegaki <kan1.921017@gmail.com>"]
license = "MIT"
homepage = "https://github.com/kan1-u/parail"
documentation = "https://docs.rs/parail"
keywords = ["parallel", "iterator", "stream"]
readme = "README.md"

[features]
default = ["iter", "stream"]
iter = ["rayon"]
stream = ["futures", "tokio/sync", "tokio/rt"]
futures = ["dep:futures"]
rayon = ["dep:rayon"]
tokio = ["dep:tokio"]

[dependencies]
futures = { version = "0.3.31", optional = true }
rayon = { version = "1.10.0", optional = true }
tokio = { version = "1.44.2", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
tokio = { version = "1.44.2", features = ["full"] }

[[bench]]
name = "bench"
harness = false
